Fix busqueda matricula y rutas de mantenimiento

--- a/src/app/pages/matriculas/matriculas.component.html
+++ b/src/app/pages/matriculas/matriculas.component.html
@@ -3,7 +3,7 @@
         <div class="card">
             <div class="card-body">
 
-                <input #input (keyup)="buscarMatricula( input.value )" type="text" class="form-control" placeholder="Buscar matricula...">
+                <input #input (keyup)="buscarMatriculas( input.value )" type="text" class="form-control" placeholder="Buscar matricula...">
 
             </div>
         </div>
