--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -17,33 +17,36 @@
                         <div class="form-material">
                             <input class="form-control p-20" type="text" placeholder="Search Contact">
                         </div>
-                        <ul class="chatonline style-none ">
-                            <li>
-                                <a href="javascript:void(0)"><img src="assets/images/users/1.jpg" alt="user-img" class="img-circle"> <span>Varun Dhavan <small class="text-success">online</small></span></a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)" class="active"><img src="assets/images/users/2.jpg" alt="user-img" class="img-circle"> <span>Genelia Deshmukh <small class="text-warning">Away</small></span></a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)"><img src="assets/images/users/3.jpg" alt="user-img" class="img-circle"> <span>Ritesh Deshmukh <small class="text-danger">Busy</small></span></a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)"><img src="assets/images/users/4.jpg" alt="user-img" class="img-circle"> <span>Arijit Sinh <small class="text-muted">Offline</small></span></a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)"><img src="assets/images/users/5.jpg" alt="user-img" class="img-circle"> <span>Govinda Star <small class="text-success">online</small></span></a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)"><img src="assets/images/users/6.jpg" alt="user-img" class="img-circle"> <span>John Abraham<small class="text-success">online</small></span></a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)"><img src="assets/images/users/7.jpg" alt="user-img" class="img-circle"> <span>Hritik Roshan<small class="text-success">online</small></span></a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)"><img src="assets/images/users/8.jpg" alt="user-img" class="img-circle"> <span>Pwandeep rajan <small class="text-success">online</small></span></a>
-                            </li>
-                            <li class="p-20"></li>
-                        </ul>
+                        <perfect-scrollbar style="max-height: 400px;">
+
+                            <ul class="chatonline style-none ">
+                                <li>
+                                    <a href="javascript:void(0)"><img src="assets/images/users/1.jpg" alt="user-img" class="img-circle"> <span>Varun Dhavan <small class="text-success">online</small></span></a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)" class="active"><img src="assets/images/users/2.jpg" alt="user-img" class="img-circle"> <span>Genelia Deshmukh <small class="text-warning">Away</small></span></a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"><img src="assets/images/users/3.jpg" alt="user-img" class="img-circle"> <span>Ritesh Deshmukh <small class="text-danger">Busy</small></span></a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"><img src="assets/images/users/4.jpg" alt="user-img" class="img-circle"> <span>Arijit Sinh <small class="text-muted">Offline</small></span></a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"><img src="assets/images/users/5.jpg" alt="user-img" class="img-circle"> <span>Govinda Star <small class="text-success">online</small></span></a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"><img src="assets/images/users/6.jpg" alt="user-img" class="img-circle"> <span>John Abraham<small class="text-success">online</small></span></a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"><img src="assets/images/users/7.jpg" alt="user-img" class="img-circle"> <span>Hritik Roshan<small class="text-success">online</small></span></a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"><img src="assets/images/users/8.jpg" alt="user-img" class="img-circle"> <span>Pwandeep rajan <small class="text-success">online</small></span></a>
+                                </li>
+                                <li class="p-20"></li>
+                            </ul>
+                        </perfect-scrollbar>
                     </div>
                 </div>
                 <!-- .chat-left-panel -->
@@ -54,56 +57,59 @@
                             <h3 class="box-title">Chat Message</h3>
                         </div>
                     </div>
-                    <div class="chat-rbox">
-                        <ul class="chat-list p-20">
-                            <!--chat Row -->
-                            <li>
-                                <div class="chat-img"><img src="assets/images/users/1.jpg" alt="user" /></div>
-                                <div class="chat-content">
-                                    <h5>James Anderson</h5>
-                                    <div class="box bg-light-info">Lorem Ipsum is simply dummy text of the printing & type setting industry.</div>
-                                </div>
-                                <div class="chat-time">10:56 am</div>
-                            </li>
-                            <!--chat Row -->
-                            <li>
-                                <div class="chat-img"><img src="assets/images/users/2.jpg" alt="user" /></div>
-                                <div class="chat-content">
-                                    <h5>Bianca Doe</h5>
-                                    <div class="box bg-light-info">It’s Great opportunity to work.</div>
-                                </div>
-                                <div class="chat-time">10:57 am</div>
-                            </li>
-                            <!--chat Row -->
-                            <li class="reverse">
-                                <div class="chat-content">
-                                    <h5>Steave Doe</h5>
-                                    <div class="box bg-light-inverse">It’s Great opportunity to work.</div>
-                                </div>
-                                <div class="chat-img"><img src="assets/images/users/5.jpg" alt="user" /></div>
-                                <div class="chat-time">10:57 am</div>
-                            </li>
-                            <!--chat Row -->
-                            <li class="reverse">
-                                <div class="chat-content">
-                                    <h5>Steave Doe</h5>
-                                    <div class="box bg-light-inverse">It’s Great opportunity to work.</div>
-                                </div>
-                                <div class="chat-img"><img src="assets/images/users/5.jpg" alt="user" /></div>
-                                <div class="chat-time">10:57 am</div>
-                            </li>
-                            <!--chat Row -->
-                            <li>
-                                <div class="chat-img"><img src="assets/images/users/3.jpg" alt="user" /></div>
-                                <div class="chat-content">
-                                    <h5>Angelina Rhodes</h5>
-                                    <div class="box bg-light-info">Well we have good budget for the project</div>
-                                </div>
-                                <div class="chat-time">11:00 am</div>
-                            </li>
-                            <!--chat Row -->
-                        </ul>
-                    </div>
+                    <perfect-scrollbar style="max-height: 320px;">
+
+                        <div class="chat-rbox">
+                            <ul class="chat-list p-20">
+                                <!--chat Row -->
+                                <li>
+                                    <div class="chat-img"><img src="assets/images/users/1.jpg" alt="user" /></div>
+                                    <div class="chat-content">
+                                        <h5>James Anderson</h5>
+                                        <div class="box bg-light-info">Lorem Ipsum is simply dummy text of the printing & type setting industry.</div>
+                                    </div>
+                                    <div class="chat-time">10:56 am</div>
+                                </li>
+                                <!--chat Row -->
+                                <li>
+                                    <div class="chat-img"><img src="assets/images/users/2.jpg" alt="user" /></div>
+                                    <div class="chat-content">
+                                        <h5>Bianca Doe</h5>
+                                        <div class="box bg-light-info">It’s Great opportunity to work.</div>
+                                    </div>
+                                    <div class="chat-time">10:57 am</div>
+                                </li>
+                                <!--chat Row -->
+                                <li class="reverse">
+                                    <div class="chat-content">
+                                        <h5>Steave Doe</h5>
+                                        <div class="box bg-light-inverse">It’s Great opportunity to work.</div>
+                                    </div>
+                                    <div class="chat-img"><img src="assets/images/users/5.jpg" alt="user" /></div>
+                                    <div class="chat-time">10:57 am</div>
+                                </li>
+                                <!--chat Row -->
+                                <li class="reverse">
+                                    <div class="chat-content">
+                                        <h5>Steave Doe</h5>
+                                        <div class="box bg-light-inverse">It’s Great opportunity to work.</div>
+                                    </div>
+                                    <div class="chat-img"><img src="assets/images/users/5.jpg" alt="user" /></div>
+                                    <div class="chat-time">10:57 am</div>
+                                </li>
+                                <!--chat Row -->
+                                <li>
+                                    <div class="chat-img"><img src="assets/images/users/3.jpg" alt="user" /></div>
+                                    <div class="chat-content">
+                                        <h5>Angelina Rhodes</h5>
+                                        <div class="box bg-light-info">Well we have good budget for the project</div>
+                                    </div>
+                                    <div class="chat-time">11:00 am</div>
+                                </li>
+                                <!--chat Row -->
+                            </ul>
+                        </div>
+                    </perfect-scrollbar>
                     <div class="card-body b-t">
                         <div class="row">
                             <div class="col-8">
