--- a/src/app/pages/mantenimiento/carreras/carreras.component.html
+++ b/src/app/pages/mantenimiento/carreras/carreras.component.html
@@ -1,3 +1,67 @@
-<p>
-  carreras works!
-</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3 class="card-title">Carreras registradas ( <small>  </small> )</h3>
+                    </div>
+                    <div class="col-md-6 text-right">
+                        <button [routerLink]="['/matricula','nuevo']" type="button" class="btn waves-effect waves-light btn-rounded btn-primary">
+                  <i class="fa fa-plus"></i> 
+                  Crear Matricula
+                </button>
+                    </div>
+                </div>
+                <div class="row animated fadeIn" *ngIf="cargando">
+
+                    <div class="col-sm-12">
+
+                        <div class="alert alert-warning text-center">
+                            <strong>Cargando</strong>
+                            <br>
+                            <i class="fa fa-refresh fa-spin fa-2x"></i>
+                            <br>
+                            <span>Espere por favor</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="col-lg-4 col-xlg-3 col-md-5">
+    <div data-toggle="modal" data-target="#myModal" class="card pointer">
+        <div class="card-body text-center">
+            <div class="m-t-30">
+                <h4 class="card-title m-t-10">Lic. en Ingenieria en Sistemas Computacionales</h4>
+                <h6 class="card-subtitle">Revoe: AFMHEO3839SK-ODD</h6>
+                <div class="row text-center justify-content-md-center">
+                    <div class="col-4"><a href="javascript:void(0)" class="link"><i class="icon-people"></i> <font class="font-medium">254</font></a></div>
+                    <div class="col-4"><a href="javascript:void(0)" class="link"><i class="icon-picture"></i> <font class="font-medium">54</font></a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- sample modal content -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- /.modal -->
