Guardado del día 27

--- a/src/app/pages/mantenimiento/carreras/carreras.component.html
+++ b/src/app/pages/mantenimiento/carreras/carreras.component.html
@@ -7,7 +7,7 @@
                         <h3 class="card-title">Carreras registradas ( <small>  </small> )</h3>
                     </div>
                     <div class="col-md-6 text-right">
-                        <button [routerLink]="['/matricula','nuevo']" type="button" class="btn waves-effect waves-light btn-rounded btn-primary">
+                        <button data-toggle="modal" data-target="#myModal" type="button" class="btn waves-effect waves-light btn-rounded btn-primary">
                   <i class="fa fa-plus"></i> 
                   Crear Matricula
                 </button>
@@ -38,18 +38,18 @@
                 <h6 class="card-subtitle">Revoe: AFMHEO3839SK-ODD</h6>
                 <div class="row text-center justify-content-md-center">
                     <div class="col-4"><a href="javascript:void(0)" class="link"><i class="icon-people"></i> <font class="font-medium">254</font></a></div>
-                    <div class="col-4"><a href="javascript:void(0)" class="link"><i class="icon-picture"></i> <font class="font-medium">54</font></a></div>
+                    <div class="col-4"><a href="javascript:void(0)" class="link"><i class="fa fa-graduation-cap"></i> <font class="font-medium">54</font></a></div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 <!-- sample modal content -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="myModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLongTitle">Instituto Universitario de la Costa - Carreas</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
