--- a/src/app/pages/mantenimiento/carreras/carreras.component.html
+++ b/src/app/pages/mantenimiento/carreras/carreras.component.html
@@ -4,7 +4,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-6">
-                        <h3 class="card-title">Carreras registradas ( <small>  </small> )</h3>
+                        <h3 class="card-title">Carreras registradas ( <small> {{ _carreraService.totalCarreras }} </small> )</h3>
                     </div>
                     <div class="col-md-6 text-right">
                         <button data-toggle="modal" data-target="#myModal" type="button" class="btn waves-effect waves-light btn-rounded btn-primary">
