--- a/src/app/pages/mantenimiento/carreras/carreras.component.html
+++ b/src/app/pages/mantenimiento/carreras/carreras.component.html
@@ -7,9 +7,9 @@
                         <h3 class="card-title">Carreras registradas ( <small> {{ _carreraService.totalCarreras }} </small> )</h3>
                     </div>
                     <div class="col-md-6 text-right">
-                        <button data-toggle="modal" data-target="#myModal" type="button" class="btn waves-effect waves-light btn-rounded btn-primary">
+                        <button (click)="agregarCarrera()" data-toggle="modal" data-target="#myModal" type="button" class="btn waves-effect waves-light btn-rounded btn-primary">
                   <i class="fa fa-plus"></i> 
-                  Crear Matricula
+                  Crear Carrera
                 </button>
                     </div>
                 </div>
@@ -30,15 +30,22 @@
         </div>
     </div>
 </div>
-<div class="col-lg-4 col-xlg-3 col-md-5">
-    <div data-toggle="modal" data-target="#myModal" class="card pointer">
-        <div class="card-body text-center">
-            <div class="m-t-30">
-                <h4 class="card-title m-t-10">Lic. en Ingenieria en Sistemas Computacionales</h4>
-                <h6 class="card-subtitle">Revoe: AFMHEO3839SK-ODD</h6>
-                <div class="row text-center justify-content-md-center">
-                    <div class="col-4"><a href="javascript:void(0)" class="link"><i class="icon-people"></i> <font class="font-medium">254</font></a></div>
-                    <div class="col-4"><a href="javascript:void(0)" class="link"><i class="fa fa-graduation-cap"></i> <font class="font-medium">54</font></a></div>
+<div class="row justify-content-md-center">
+
+    <div *ngIf="nothing" class="col-md-6 text-center alert alert-success">No existe ninguna carrera. </div>
+</div>
+<div class="row">
+
+    <div *ngFor="let carrera of carreras; let i = index" (click)="actualizarCarrera( i )" class="col-lg-4 col-xlg-3 col-md-5">
+        <div data-toggle="modal" data-target="#myModal" class="card pointer">
+            <div class="card-body text-center">
+                <div class="m-t-30">
+                    <h4 class="card-title m-t-10">{{ carrera.nombre }}</h4>
+                    <h6 class="card-subtitle">{{ carrera.revoe }}</h6>
+                    <div class="row text-center justify-content-md-center">
+                        <div class="col-4"><a href="javascript:void(0)" class="link"><i class="icon-people"></i> <font class="font-medium">254</font></a></div>
+                        <div class="col-4"><a href="javascript:void(0)" class="link"><i class="fa fa-graduation-cap"></i> <font class="font-medium">54</font></a></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -49,17 +56,52 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Instituto Universitario de la Costa - Carreas</h5>
+                <h5 class="modal-title" id="exampleModalLongTitle">Instituto Universitario de la Costa - Carreras</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
             </div>
             <div class="modal-body">
-                ...
+                <div class="card">
+                    <div class="card-body">
+                        <div *ngIf="creator">
+                            <h4 class="card-title">Nueva Carrera</h4>
+                            <h6 class="card-subtitle">Rellene todo lo que se le pide</h6>
+                        </div>
+                        <div *ngIf="!creator">
+                            <h4 class="card-title">Actualizar Carrera</h4>
+                            <h6 class="card-subtitle">Rellene todo lo que se le pide</h6>
+                        </div>
+                        <div class="form p-t-20">
+                            <div class="form-group">
+                                <label for="exampleInputuname2">Nombre de la carrera</label>
+                                <div class="input-group">
+                                    <input [(ngModel)]="carrera.nombre" type="text" class="form-control" id="exampleInputuname2" placeholder="Carrea">
+                                    <div class="input-group-addon"><i class="mdi mdi-school"></i></div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail2">RVOE</label>
+                                <div class="input-group">
+                                    <input [(ngModel)]="carrera.revoe" type="text" class="form-control" id="exampleInputEmail2" placeholder="Rvoe">
+                                    <div class="input-group-addon"><i class="mdi mdi-lock-open"></i></div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputpwd2">Año</label>
+                                <div class="input-group">
+                                    <input [(ngModel)]="carrera.year" type="text" class="form-control" id="exampleInputpwd2" placeholder="Año">
+                                    <div class="input-group-addon"><i class="mdi mdi-timer-sand"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                <button data-dismiss="modal" (click)="guardarCarrera()" *ngIf="creator" type="button" class="btn btn-primary">Guardar</button>
+                <button data-dismiss="modal" (click)="guardarActualizacion()" *ngIf="!creator" type="button" class="btn btn-primary">Actualizar</button>
             </div>
         </div>
     </div>
