--- a/src/app/pages/mantenimiento/grupos/grupos.component.html
+++ b/src/app/pages/mantenimiento/grupos/grupos.component.html
@@ -1,3 +1,89 @@
-<p>
-  grupos works!
-</p>
+<div class="row animated fadeIn">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+
+                <input #input (keyup)="buscarCarrera( input.value )" type="text" class="form-control" placeholder="Buscar carrera...">
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row animated fadeIn" *ngIf="cargando">
+
+    <div class="col-sm-12">
+
+        <div class="alert alert-warning text-center">
+            <strong>Cargando</strong>
+            <br>
+            <i class="fa fa-refresh fa-spin fa-2x"></i>
+            <br>
+            <span>Espere por favor</span>
+        </div>
+    </div>
+</div>
+
+
+<div class="row animated fadeIn" *ngIf="!cargando">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+
+                <h3 class="card-title">Grupos registrados ( <small>{{ totalRegistros }}</small> )</h3>
+
+
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Imagen</th>
+                            <th>Nombre</th>
+                            <th>Tipo</th>
+                            <th>Carrera</th>
+                            <th>Auth</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr *ngFor="let grupo of grupos">
+                            <td class="w70">
+                                <img (click)="mostrarModal( grupo._id )" [src]="grupo.img | imagen" class="img-50 img-circle pointer">
+                            </td>
+                            <td>
+                                {{ grupo.nombre }}
+                            </td>
+                            <td>{{ grupo.tipo }}</td>
+                            <td>
+
+                                {{ grupo.carrera }}
+                            </td>
+                            <td>
+                                <button (click)="guardarUsuario( usuario )" class="btn btn-primary">
+                                <i class="fa fa-save"></i>
+                              </button>
+
+                                <button (click)="borrarUsuario( usuario )" class="btn btn-danger">
+                                  <i class="fa fa-trash-o"></i>
+                                </button>
+                            </td>
+                        </tr>
+
+                    </tbody>
+
+                </table>
+
+                <button (click)="cambiarDesde(-5)" class="btn btn-secondary">
+                  Anteriores
+                </button>
+
+                <button (click)="cambiarDesde(5)" class="btn btn-secondary">
+                    Siguientes
+                </button>
+
+
+
+            </div>
+        </div>
+    </div>
+</div>
