--- a/src/app/pages/chat/contactos.component.html
+++ b/src/app/pages/chat/contactos.component.html
@@ -2,248 +2,37 @@
 <!-- Start Page Content -->
 <!-- ============================================================== -->
 <!-- .row -->
-<div class="row">
-    <!-- .col -->
-    <div class="col-md-6 col-lg-6 col-xlg-4">
-        <div class="card card-body">
-            <div class="row">
-                <div class="col-md-4 col-lg-3 text-center">
-                    <a href="app-contact-detail.html"><img src="../assets/images/users/1.jpg" alt="user" class="img-circle img-responsive"></a>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                    <h3 class="box-title m-b-0">Johnathan Doe</h3> <small>Web Designer</small>
-                    <address>
-                                      795 Folsom Ave, Suite 600 San Francisco, CADGE 94107
-                                      <br/>
-                                      <br/>
-                                      <abbr title="Phone">P:</abbr> (123) 456-7890
-                                  </address>
-                </div>
+<div class="row animated fadeIn">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+
+                <input #input (keyup)="buscarContacto( input.value )" type="text" class="form-control" placeholder="Buscar contacto...">
+
             </div>
         </div>
     </div>
-    <!-- /.col -->
-    <!-- .col -->
-    <div class="col-md-6 col-lg-6 col-xlg-4">
-        <div class="card card-body">
-            <div class="row">
-                <div class="col-md-4 col-lg-3 text-center">
-                    <a href="app-contact-detail.html"><img src="../assets/images/users/2.jpg" alt="user" class="img-circle img-responsive"></a>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                    <h3 class="box-title m-b-0">Johnathan Doe</h3> <small>Web Designer</small>
-                    <address>
-                                      795 Folsom Ave, Suite 600 San Francisco, CADGE 94107
-                                      <br/>
-                                      <br/>
-                                      <abbr title="Phone">P:</abbr> (123) 456-7890
-                                  </address>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /.col -->
-    <!-- .col -->
-    <div class="col-md-6 col-lg-6 col-xlg-4">
-        <div class="card card-body">
-            <div class="row">
-                <div class="col-md-4 col-lg-3 text-center">
-                    <a href="app-contact-detail.html"><img src="../assets/images/users/3.jpg" alt="user" class="img-circle img-responsive"></a>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                    <h3 class="box-title m-b-0">Johnathan Doe</h3> <small>Web Designer</small>
-                    <address>
-                                      795 Folsom Ave, Suite 600 San Francisco, CADGE 94107
-                                      <br/>
-                                      <br/>
-                                      <abbr title="Phone">P:</abbr> (123) 456-7890
-                                  </address>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /.col -->
-    <!-- .col -->
-    <div class="col-md-6 col-lg-6 col-xlg-4">
-        <div class="card card-body">
-            <div class="row">
-                <div class="col-md-4 col-lg-3 text-center">
-                    <a href="app-contact-detail.html"><img src="../assets/images/users/4.jpg" alt="user" class="img-circle img-responsive"></a>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                    <h3 class="box-title m-b-0">Johnathan Doe</h3> <small>Web Designer</small>
-                    <address>
-                                      795 Folsom Ave, Suite 600 San Francisco, CADGE 94107
-                                      <br/>
-                                      <br/>
-                                      <abbr title="Phone">P:</abbr> (123) 456-7890
-                                  </address>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /.col -->
-    <!-- .col -->
-    <div class="col-md-6 col-lg-6 col-xlg-4">
-        <div class="card card-body">
-            <div class="row">
-                <div class="col-md-4 col-lg-3 text-center">
-                    <a href="app-contact-detail.html"><img src="../assets/images/users/5.jpg" alt="user" class="img-circle img-responsive"></a>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                    <h3 class="box-title m-b-0">Johnathan Doe</h3> <small>Web Designer</small>
-                    <address>
-                                      795 Folsom Ave, Suite 600 San Francisco, CADGE 94107
-                                      <br/>
-                                      <br/>
-                                      <abbr title="Phone">P:</abbr> (123) 456-7890
-                                  </address>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /.col -->
-    <!-- .col -->
-    <div class="col-md-6 col-lg-6 col-xlg-4">
-        <div class="card card-body">
-            <div class="row">
-                <div class="col-md-4 col-lg-3 text-center">
-                    <a href="app-contact-detail.html"><img src="../assets/images/users/6.jpg" alt="user" class="img-circle img-responsive"></a>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                    <h3 class="box-title m-b-0">Johnathan Doe</h3> <small>Web Designer</small>
-                    <address>
-                                      795 Folsom Ave, Suite 600 San Francisco, CADGE 94107
-                                      <br/>
-                                      <br/>
-                                      <abbr title="Phone">P:</abbr> (123) 456-7890
-                                  </address>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /.col -->
-    <!-- .col -->
-    <div class="col-md-6 col-lg-6 col-xlg-4">
-        <div class="card card-body">
-            <div class="row">
-                <div class="col-md-4 col-lg-3 text-center">
-                    <a href="app-contact-detail.html"><img src="../assets/images/users/7.jpg" alt="user" class="img-circle img-responsive"></a>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                    <h3 class="box-title m-b-0">Johnathan Doe</h3> <small>Web Designer</small>
-                    <address>
-                                      795 Folsom Ave, Suite 600 San Francisco, CADGE 94107
-                                      <br/>
-                                      <br/>
-                                      <abbr title="Phone">P:</abbr> (123) 456-7890
-                                  </address>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /.col -->
-    <!-- .col -->
-    <div class="col-md-6 col-lg-6 col-xlg-4">
-        <div class="card card-body">
-            <div class="row">
-                <div class="col-md-4 col-lg-3 text-center">
-                    <a href="app-contact-detail.html"><img src="../assets/images/users/8.jpg" alt="user" class="img-circle img-responsive"></a>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                    <h3 class="box-title m-b-0">Johnathan Doe</h3> <small>Web Designer</small>
-                    <address>
-                                      795 Folsom Ave, Suite 600 San Francisco, CADGE 94107
-                                      <br/>
-                                      <br/>
-                                      <abbr title="Phone">P:</abbr> (123) 456-7890
-                                  </address>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /.col -->
-    <!-- .col -->
-    <div class="col-md-6 col-lg-6 col-xlg-4">
-        <div class="card card-body">
-            <div class="row">
-                <div class="col-md-4 col-lg-3 text-center">
-                    <a href="app-contact-detail.html"><img src="../assets/images/users/1.jpg" alt="user" class="img-circle img-responsive"></a>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                    <h3 class="box-title m-b-0">Johnathan Doe</h3> <small>Web Designer</small>
-                    <address>
-                                      795 Folsom Ave, Suite 600 San Francisco, CADGE 94107
-                                      <br/>
-                                      <br/>
-                                      <abbr title="Phone">P:</abbr> (123) 456-7890
-                                  </address>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /.col -->
-    <!-- .col -->
-    <div class="col-md-6 col-lg-6 col-xlg-4">
-        <div class="card card-body">
-            <div class="row">
-                <div class="col-md-4 col-lg-3 text-center">
-                    <a href="app-contact-detail.html"><img src="../assets/images/users/2.jpg" alt="user" class="img-circle img-responsive"></a>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                    <h3 class="box-title m-b-0">Johnathan Doe</h3> <small>Web Designer</small>
-                    <address>
-                                      795 Folsom Ave, Suite 600 San Francisco, CADGE 94107
-                                      <br/>
-                                      <br/>
-                                      <abbr title="Phone">P:</abbr> (123) 456-7890
-                                  </address>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /.col -->
-    <!-- .col -->
-    <div class="col-md-6 col-lg-6 col-xlg-4">
-        <div class="card card-body">
-            <div class="row">
-                <div class="col-md-4 col-lg-3 text-center">
-                    <a href="app-contact-detail.html"><img src="../assets/images/users/3.jpg" alt="user" class="img-circle img-responsive"></a>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                    <h3 class="box-title m-b-0">Johnathan Doe</h3> <small>Web Designer</small>
-                    <address>
-                                      795 Folsom Ave, Suite 600 San Francisco, CADGE 94107
-                                      <br/>
-                                      <br/>
-                                      <abbr title="Phone">P:</abbr> (123) 456-7890
-                                  </address>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /.col -->
-    <!-- .col -->
-    <div class="col-md-6 col-lg-6 col-xlg-4">
-        <div class="card card-body">
-            <div class="row">
-                <div class="col-md-4 col-lg-3 text-center">
-                    <a href="app-contact-detail.html"><img src="../assets/images/users/4.jpg" alt="user" class="img-circle img-responsive"></a>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                    <h3 class="box-title m-b-0">Johnathan Doe</h3> <small>Web Designer</small>
-                    <address>
-                                      795 Folsom Ave, Suite 600 San Francisco, CADGE 94107
-                                      <br/>
-                                      <br/>
-                                      <abbr title="Phone">P:</abbr> (123) 456-7890
-                                  </address>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /.col -->
 </div>
+<perfect-scrollbar style="max-height: 400px;">
+    <div class="row animated fadeIn">
+        <!-- .col -->
+        <div *ngFor="let contacto of contactos" class="col-md-6 col-lg-6 col-xlg-4">
+            <div class="card card-body">
+                <div class="row">
+                    <div class="col-md-4 col-lg-3 text-center">
+                        <!-- <img [src]="contacto.img" alt="user" class="img-circle img-responsive"> -->
+                        <img [src]="contacto.img | imagen" class="img-responsive img-circle">
+                    </div>
+                    <div class="col-md-8 col-lg-9">
+                        <h3 class="box-title m-b-0">{{contacto.nombre}}</h3> <small>{{contacto.matricula.tipo}}</small>
+                        <address>{{ contacto.matricula.titulo }}</address>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.col -->
+    </div>
+</perfect-scrollbar>
 <!-- /.row -->
 <!-- ============================================================== -->
 <!-- End PAge Content -->
