--- a/src/app/pages/mantenimiento/carreras/carreras.component.html
+++ b/src/app/pages/mantenimiento/carreras/carreras.component.html
@@ -13,6 +13,7 @@
                 </button>
                     </div>
                 </div>
+                <!-- Cargando -->
                 <div class="row animated fadeIn" *ngIf="cargando">
 
                     <div class="col-sm-12">
@@ -26,6 +27,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- End Cargando -->
             </div>
         </div>
     </div>
