Estructura general, creacion de pdf (Prueba)

--- a/src/app/pages/mantenimiento/grupos/grupo.component.html
+++ b/src/app/pages/mantenimiento/grupos/grupo.component.html
@@ -187,3 +187,10 @@
     </div>
 </div>
 <!-- /.modal -->
+
+<div class="row col-md-12 text-center">
+    <button (click)="download()" type="submit" class="btn btn-success waves-effect waves-light m-r-10">
+                <i class="fa fa-save"></i>
+                Guardar
+              </button>
+</div>
