Error de emparejamiento

--- a/src/app/pages/mantenimiento/materias/materias.component.html
+++ b/src/app/pages/mantenimiento/materias/materias.component.html
@@ -143,8 +143,8 @@
                             <button (click)="borrarMateria( i )" class="btn btn-danger">
                                 <i class="mdi mdi-delete-forever"></i>
                             </button>
-                            <button (click)="borrarMateria( i )" class="btn btn-danger">
-                                    <i class="mdi mdi-delete-forever"></i>
+                            <button (click)="borrarMateria( i )" class="btn btn-info">
+                                    <i class="mdi mdi-content-save"></i>
                             </button>
                         </td>
                     </tr>
