--- a/src/app/pages/mantenimiento/materias/materias.component.html
+++ b/src/app/pages/mantenimiento/materias/materias.component.html
@@ -122,6 +122,15 @@
     </div>
 </div>
 <div class="row">
+    <div class="col-md-12 text-center" *ngIf="save">
+        <div class="alert alert-warning text-center">
+            <strong>Cargando</strong>
+            <br>
+            <i class="fa fa-refresh fa-spin fa-2x"></i>
+            <br>
+            <span>Espere por favor</span>
+        </div>
+    </div>
     <div *ngIf="guardado" class=" col-md-12 card card-body">
         <div>
             <table class="table table-hover">
